2011-11-21    <h.v.raven@googlemail.com>

	* src/xmldecoder.cpp (decode_casting_time_): new function

	* src/xml.h (Spell_List): renamed add_{elements,name,school,level} to decode_

	* src/xmlspelllist.cpp (check_spell_): renamed call of add_elements to decode_elements

2011-11-20    <h.v.raven@googlemail.com>

	* src/xmldecoder.cpp (add_school_): changed xml attribute calls to use query functions for better checks

	* src/token.h (Spell_Element_Token): added SUBSCHOOL and DESCRIPTOR

	* src/school.cpp (print): fixed bug printing descriptor in case no descriptor was set

	* src/error.h (exception): added Invalid_Element

	* src/spell.h (Spell): added set_level and add_level

	* src/xmldecoder.cpp (add_name_, add_school_, add_level_): changed parameter to const*
	(add_school_): changed insert to spell to set_school
	(add_name_): changed insert to spell to set_name
	(add_elements_): added level to switch
	(add_level_): complete rewrite

	* src/spell.cpp (add_element): simplified if check for TARGET

2011-10-21    <h.v.raven@googlemail.com>

	* src/gtkwindow.cpp (display_spell): changed to use RefPtr

	* src/xml.h (Spell_RefPtr): New class for save pointer acces on spells

	* src/xmlspelllist.cpp (get_checked_spell_pointer_, get_checked_spell_ref_): new functions

2011-10-17    <h.v.raven@googlemail.com>

	* src/xml.h: new typedef for spell_iterator

	* src/xmlspelllist.cpp (fill_list_, get_spell_list, get_spell, read_spell_) changed to use iterators instead of pointers

2011-10-14    <h.v.raven@googlemail.com>

	* src/xmlspelllist.cpp (Spell_List): changed to use spell_list and spell_name_map

	* src/xmldecoder.cpp (get_names_): new function to get all spell names

2011-10-11    <h.v.raven@googlemail.com>

	* src/xmldecoder.cpp (add_school_): new decoding function for schools

	* src/school.cpp (School, remove_subschool): changed arguments to reference
	(print): added descriptor to output
	(print_descriptor): new function
